feat: add Docker configuration and environment-based Spring Boot settings for Railway deployment